--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
     "framer-motion": "^11.0.0",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.552.0",
-    "next": "15.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^16.1.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "resend": "^6.8.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
